added colin's changes

--- a/career.html
+++ b/career.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Browse the vacancies we are currently recruiting to find a great fit; we are growing our teams in the United States, Canada and China">
   <meta name="author" content="">
-  <meta name="keywords" content="riverpay, jobs, roles, positions, vacancies, talents, recruitment, human resources, team development">
+  <meta name="keywords" content="riverpay, jobs, roles, positions, vacancies, talents, recruitment, human resources, team development, the UK ">
 
   <title>RiverPay is always looking for new talents to expand our team</title>
 
@@ -97,8 +97,16 @@
             
           </div>
           <div class="col-md-4">
+            <div class="team-member">
+              <button id="button3" onclick="myFunction3()" style="border: none; background-color: white; outline: none;">
+                <img class="mx-auto rounded-circle" src="img/Career/london.png">
+              </button>
+            </div>
+          
+        </div>
+          <div class="col-md-4">
               <div class="team-member">
-                <button id="button3" onclick="myFunction3()" style="border: none; background-color: white; outline: none;">
+                <button id="button4" onclick="myFunction4()" style="border: none; background-color: white; outline: none;">
                   <img class="mx-auto rounded-circle" src="img/Career/china.png">
                 </button>
               </div>
