--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Contact RiverPay to meet your business needs through safe and convenient payment solutions as well as seize the huge purchase potential of Chinese consumers">
   <meta name="author" content="">
-  <meta name="keywords" content="riverpay, canada, usa, china, Mississauga, toronto, ontario, fremont, california, shanghai">
+  <meta name="keywords" content="riverpay, canada, usa, china, Mississauga, toronto, ontario, fremont, california, shanghai, london, england,UK, the UK">
 
   <title>Contact RiverPay</title>
 
@@ -72,13 +72,14 @@
           <div class="col-lg-4 col-md-4 col-xs-4 thumb">
             <div class="card shadow">
               <div class="thumbnail text-center text-white">
-                <img class="card-img-top contact-card-img" style="filter: brightness(50%)" src="img/contact/canada_toronto.jpg" alt="">
+                <img class="card-img-top contact-card-img" style="filter: brightness(50%)" src="img/contact/cali_fremont.jpeg" alt="">
                 <div class="caption">
-                  <p><u>Toronto, Canada</u></p>
-              </div>
+                  <p><u>California, USA</u></p>
+                </div>
               </div>
               <div class="card-body">
-                <p class="card-text text-center">5045 Orbitor Drive.<br>
+                <p class="card-text text-center" style="font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';">
+                  5045 Orbitor Drive.<br>
                   Mississauga, Ontario. <br> L4W 4Y4, Canada.</p>
               </div>
             </div>
@@ -86,13 +87,29 @@
           <div class="col-lg-4 col-md-4 col-xs-4 thumb">
             <div class="card shadow">
               <div class="thumbnail text-center text-white">
-                <img class="card-img-top contact-card-img" style="filter: brightness(50%)" src="img/contact/cali_fremont.jpeg" alt="">
+                <img class="card-img-top contact-card-img" style="filter: brightness(50%)" src="img/contact/canada_toronto.jpg" alt="">
                 <div class="caption">
-                  <p><u>California, USA</u></p>
-                </div>
+                  <p><u>Toronto, Canada</u></p>
+              </div>
               </div>
               <div class="card-body">
-                <p class="card-text text-center">5045 Orbitor Drive.<br>
+                <p class="card-text text-center" style="font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+                ">5045 Orbitor Drive.<br>
+                  Mississauga, Ontario. <br> L4W 4Y4, Canada.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-xs-4 thumb">
+            <div class="card shadow">
+              <div class="thumbnail text-center text-white">
+                <img class="card-img-top contact-card-img" style="filter: brightness(50%)" src="img/contact/london.jpg" alt="">
+                <div class="caption">
+                  <p><u>London, England</u></p>
+              </div>
+              </div>
+              <div class="card-body">
+                <p class="card-text text-center" style="font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';">
+                  5045 Orbitor Drive.<br>
                   Mississauga, Ontario. <br> L4W 4Y4, Canada.</p>
               </div>
             </div>
@@ -106,7 +123,8 @@
                 </div>
               </div>
               <div class="card-body">
-                <p class="card-text text-center">5045 Orbitor Drive.<br>
+                <p class="card-text text-center" style="font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';">
+                  5045 Orbitor Drive.<br>
                   Mississauga, Ontario. <br> L4W 4Y4, Canada.</p>
               </div>
             </div>
