--- a/media.html
+++ b/media.html
@@ -64,19 +64,38 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">RiverPay Blog</div>
-        <div class="intro-heading">Welcome to RiverPay's blog.</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Read Media</a>
+        <div class="intro-lead-in">RiverPay Newsroom</div>
+        <div class="intro-heading">Learn the latest stories about RiverPay and industry</div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Read More</a>
       </div>
     </div>
   </header>
 
   <section id="services">
-    <div id="dib-categories"></div>
+      <div id="dib-categories"></div>
+  
+      <div id="dib-posts"></div>
+       </section>
 
-    <div id="dib-posts"></div>
-     </section>
 
+<div class="container shadow" style="background-color: white">
+      <div class="row">
+        <div class="col-md-6" style="padding: 5%;">
+          <h3>Colin Yang</h3>
+          <p>Director of Communications, RiverPay Inc.</p> <br>
+          <p class="small"><img src="img/contact/image%203.png" style="float: left; padding: 10px; width: 50px;"><span><h6>Phone Number:</h6></span>
+            <p>+1 (416) 880-1558</p>
+          <br>
+          <img src="img/contact/image%204.png" style="float: left; padding: 10px; width: 50px;"><span ><h6 style="margin-top: 4%;">Email:</h6></span>
+          colin@riverpayment.com</p>
+          <br>
+        </div>
+        <div class="col-md-6" style="text-align: center;">
+          <img class="logo" src="img/logo.png">
+        </div>
+        
+      </div>
+    </div>
   
   <!-- Footer -->
   <footer>
