--- a/service.html
+++ b/service.html
@@ -80,25 +80,25 @@
         </div>
         <div class="row" style="justify-content: center; display: flex; padding-top: 10%;">
           <div class="col-md-3">
-              <span class="fa-stack fa-4x" style="text-align: center;">
+              <span class="fa-stack fa-4x" style="text-align: center; width: 100%;">
               <img class="img-responsive" src="img/Service/service_icon1.png" >
               </span>
               <p class="text-muted">Data based precision marketing solutions and 24/7 merchant management platform for lead generation and extraneous income</p>
           </div>
           <div class="col-md-3">
-              <span class="fa-stack fa-4x" style="text-align: center;">
+              <span class="fa-stack fa-4x" style="text-align: center; width: 100%;">
               <img class="img-responsive" src="img/about/abt_icon4.png">
               </span>
               <p class="text-muted">Patent pending integration technology with over 80% mainstream POS and merchant ERP systems in real time</p>
           </div>
           <div class="col-md-3" >
-              <span class="fa-stack fa-4x" style="text-align: center;">
+              <span class="fa-stack fa-4x" style="text-align: center; width: 100%;">
               <img class="img-responsive" src="img/about/abt_icon3.png" >
               </span>
               <p class="text-muted">One-stop technology solutions and settlement services via in-store, online and mobile transactions</p>
           </div>
           <div class="col-md-3">
-              <span class="fa-stack fa-4x" style="text-align: center;">
+              <span class="fa-stack fa-4x" style="text-align: center; width: 100%;">
               <img class="img-responsive" src="img/Service/service_icon4.png" >
               </span>
               <p class="text-muted">Expandable technological capabilities powered by acquisition and partnership with research and development teams</p>
