--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="RiverPay serves over 12,000 merchants in 18 countries across North America, Europe and Asia, offering fully compliant payment and settlement services">
   <meta name="author" content="">
-  <meta name="keywords" content="payments, e-commerce, m-commerce, payment processing, payment gateway, alipay, alipay global, alipay international, wechat pay, unionPay, chinese consumers, saks fifth avenue, hudson’s bay, selfridges, holt renfrew, harry rosen, prada, tiffany">
+  <meta name="keywords" content="payments, e-commerce, m-commerce, payment processing, payment gateway, alipay, alipay global, alipay international, wechat pay, unionPay, chinese consumers, saks fifth avenue, hudson’s bay, selfridges, holt renfrew, harry rosen, prada, tiffany, riverpay, alipay, wechat pay, unionpay, mobile payment, alipay global, Alipay international, online payment, fintech, citcon, snappay, motion pay, motionpay, ott, ottpay">
 
   <title>An integrated payments and marketing platform | RiverPay</title>
 
@@ -100,6 +100,53 @@
     </div>
   </section>
 
+  <section id="advantages">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Why RiverPay</h2>
+          </div>
+        </div>
+        <div class="row" style="justify-content: center; display: flex; padding-top: 5%;">
+          <div class="col-md-3">
+              <span class="fa-stack fa-4x" style="text-align: center; width: 100%;">
+              <img class="img-responsive" style="width: 118px" src="img/about/easy.png" >
+              </span>
+              <h4>RiverPay bridges the gap between Chinese consumers and cross-border businesses.</h4>
+              <p class="text-muted">Chinese consumers can now pay credible cross-border merchants in real time with our approved payment channels using Alipay, WeChat Pay and UnionPay mobile application. <br><br>
+                Using the RiverPay payment gateway is fast, safe and convenient.
+                  </p>
+          </div>
+          <div class="col-md-3">
+              <span class="fa-stack fa-4x" style="text-align: center; width: 100%;">
+              <img class="img-responsive" style="width: 118px" src="img/about/time.png">
+              </span>
+              <h4>RiverPay provides seamless integration with existing web and mobile platforms</h4>
+              <p class="text-muted">Payment can be accepted on websites, mobile websites, mobile apps, or WeChat stores without changing merchants’ current checkout flow. RiverPay’s tech teams are available 24/7 to assist with integration and ongoing support.<br><br>
+                No website? No problem. Send an invoice and Chinese consumers can pay in real-time.  
+                  </p>
+          </div>
+          <div class="col-md-3" >
+              <span class="fa-stack fa-4x" style="text-align: center; width: 100%;">
+              <img class="img-responsive" style="width: 118px" src="img/about/mailing.png" >
+              </span>
+              <h4>RiverPay brings Chinese travelers into your door</h4>
+              <p class="text-muted">Merchants can plug in to take advantage of Alipay and WeChat Pay’s high-traffic marketing platforms, and increase awareness to travelers and locals.<br><br>
+                Merchants that leverage RiverPay services are automatically enrolled in Alipay and WeChat Pay’s merchant listings. It is fast and simple.</p>
+          </div>
+          <div class="col-md-3">
+              <span class="fa-stack fa-4x" style="text-align: center; width: 100%;">
+              <img class="img-responsive" style="width: 118px" src="img/about/boundary.png" >
+              </span>
+              <h4>Beyond the boundaries</h4>
+              <p class="text-muted">RiverPay payment gateway provides global solutions, allowing CNY to be paid and settled to merchants in USD, CAD, EUR, GBP and more.
+                  </p>
+          </div>
+        </div>
+      </div> 
+
+    </section> 
+
   <!-- Portfolio Grid -->
   <section id="portfolio">
     <div class="container">
@@ -119,7 +166,7 @@
           <span class="fa-stack fa-4x">
               <img src="img/about/abt_icon2.png">
             </span>
-          <p class="text-muted">Presence in 18 countries spanning North America, Europe and Asia.</p>
+          <p class="text-muted">Presence in 18 countries spanning North America, Europe and Asia with headquarters in Silicon Valley.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -145,12 +192,12 @@
           <span class="fa-stack fa-4x">
               <img src="img/about/abt_icon6.png">
             </span>
-          <p class="text-muted">Backed by top investors worldwide, including Marathon Venture Partners, DHVC, Extreme Venture Partner, Trilead Capital, among others</p>
+          <p class="text-muted">Backed by top investors worldwide, including Marathon Venture Partners, DHVC, Extreme Venture Partner, Trilead Capital, among others.</p>
         </div>
       </div>
     </div>
     <hr>
-    <img src="img/about/abt_logos.jpg" style="margin: auto; display: block; width: 90%;">
+    <img src="img/about/abt_logos.jpg" class="partner">
   </section>
 
   <!-- Footer -->
