--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="An Alipay and WeChat Pay authorized fintech company that offers payment solutions and settlement services to connect global merchants with Chinese consumers">
   <meta name="author" content="">
-  <meta name="keywords" content="riverpay, alipay, wechat pay, unionpay, mobile payment, alipay global, Alipay international, online payment, fintech, citcon, snappay motion pay, motionpay, ott, ottpay">
+  <meta name="keywords" content="riverpay, alipay, wechat pay, unionpay, mobile payment, alipay global, Alipay international, online payment, fintech, citcon, snappay motion pay, motionpay, ott, ottpay, snappay, motion pay">
 
   <title>AliPay & WeChat Pay authorized payment provider | RiverPay</title>
 
