--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
               <div class="thumbnail text-center text-white">
                 <img class="card-img-top contact-card-img" style="filter: brightness(50%)" src="img/contact/london.jpg" alt="">
                 <div class="caption">
-                  <p><u>London, England</u></p>
+                  <p><u>London, UK</u></p>
               </div>
               </div>
               <div class="card-body">
