fixed career page typo

--- a/career.html
+++ b/career.html
@@ -309,7 +309,7 @@ if( /Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent) ) {
       z.style.display = "none";
       u.style.display = "none";
       button3.style.display = "inline";
-      buutton4.style.display = "inline";
+      button4.style.display = "inline";
    }
   }
 
