--- a/media.html
+++ b/media.html
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">RiverPay Newsroom</div>
-        <div class="intro-heading">Learn the latest stories about RiverPay and industry</div>
+        <div class="intro-heading">Learn the latest stories about RiverPay and industry.</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Read More</a>
       </div>
     </div>
